# sfml-template

./: .gitignore  CMakeLists.txt  README.markdown  main.cpp
